--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,6 @@ python-dotenv
 streamlit
 av
 cv2
-from streamlit_webrtc import webrtc_streamer, RTCConfiguration
+streamlit_webrtc
+webrtc_streamer
+RTCConfiguration
